[orga] Fix display of step icons behind drop-down

--- a/src/pretalx/static/common/scss/_stages.scss
+++ b/src/pretalx/static/common/scss/_stages.scss
@@ -62,7 +62,7 @@
       line-height: 36px;
       border-radius: 20px;
       color: $text-muted;
-      z-index: 200;
+      z-index: 150;
       background: white;
       position: relative;
     }
